--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,6 +1,6 @@
 .wrapper {
-    max-width: 1440px;
+    max-width: 1600px; /* Mais largo para caber mais cards */
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0 40px;
     min-height: 60vh;
 }
